# c-call-asm

./: .gitignore  CMakeLists.txt  README.md  foo.s  main.c  main.cpp
test/: test_instruction_32.s.cpp  test_pseudo_instruction_32.cpp  test_pseudo_instruction_32.s
